# winsign

./: .dirschema.yml  .gitignore  .readthedocs.yml  .taskcluster.yml  .travis.yml  Dockerfile  HISTORY.rst  MANIFEST.in  README.rst  TODO  pyproject.toml  setup.py  tox.ini
docs/: conf.py  how.rst  index.rst  winsign.asn1.rst  winsign.crypto.rst  winsign.pefile.rst  winsign.rst  winsign.sign.rst  winsign.timestamp.rst  winsign.verify.rst
requirements/: base.in  base.txt  check.in  check.txt  docs.in  docs.txt  local.txt  test.in  test.txt
src/winsign/: __init__.py  _fast.pyx  _hash.c  _hash.pyx  asn1.py  cli.py  crypto.py  makemsix.py  osslsign.py  osslsigncode.py  pefile.py  pkcs7.py  sign.py  timestamp.py  verify.py  x509.py
taskcluster/: config.yml
taskcluster/docker/tox/: Dockerfile
taskcluster/kinds/docker-image/: kind.yml
taskcluster/kinds/tox/: kind.yml
tests/: common.py  conftest.py  test_checksum.py  test_fast.py  test_osslsigncode.py  test_pefile.py  test_sign.py  test_timestamps.py  test_verify.py  test_winsign.py
tests/data/: cert.pem  privkey.pem  regen-certs.sh  twocerts.pem
